[gd_scene load_steps=5 format=3 uid="uid://dwruhoji3riwd"]

[ext_resource type="Script" path="res://scripts/grub.gd" id="1_d2lme"]
[ext_resource type="Texture2D" uid="uid://i2bp1j1t7lcr" path="res://sprites/grub.png" id="1_qj8au"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5gi53"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5h3a8"]
radius = 8.0

[node name="Grub" type="RigidBody2D" groups=["EnemyProjectile"]]
collision_layer = 512
mass = 0.01
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_d2lme")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qj8au")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_5gi53")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ParryDetector" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParryDetector"]
shape = SubResource("CircleShape2D_5h3a8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="body_entered" from="ParryDetector" to="." method="_on_parry_detector_body_entered"]
